Added first utility function.
Fixed wrong lib position in Makefile for the debug target and added PATCHES
file that holds the conding guidelines used.

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,7 +21,7 @@ debug: $(DTARGET)
 
 $(DTARGET): $(DOBJ) 
 	@echo "$(CC) $@"
-	@$(CC) $(DFLAGS) $(DOBJ) -o $(DTARGET) 
+	@$(CC) $(DFLAGS) $(DOBJ) -o $(DTARGET) $(LIBS)
 
 clean:
 	@echo Cleaning
